Ensure overflow-x is clipped for collapsed tables
Follow on fix- the 2019-20_coronavirus_pandemic article had this CSS override but it needs to be applied to all collapsed tables.

Bug: T248070

--- a/pagelib/src/transform/CollapseTable.css
+++ b/pagelib/src/transform/CollapseTable.css
@@ -202,6 +202,10 @@ div.pcs-collapse-table-container {
   }
 }
 
+.pcs-collapse-table-content {
+  overflow-x: auto;
+}
+
 .wikitable {
   border: none;
 }
